# mailchimp-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  smithery.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml  publish.yml
src/mailchimp_mcp_server/: __init__.py  server.py
tests/: conftest.py  test_account_coverage.py  test_accounts.py  test_guardrails.py  test_helpers.py  test_reliability.py  test_safety_modes.py  test_tool_profiles.py  test_tools_smoke.py
