[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailchimp-mcp"
version = "0.1.1"
description = "MCP server for the Mailchimp Marketing API — access campaigns, audiences, reports, and more from Claude."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Damien Tilman", email = "damien@tilman.marketing" },
]
keywords = ["mcp", "mailchimp", "claude", "ai", "email-marketing", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mailchimp_mcp_server"]

[project.scripts]
mailchimp-mcp = "mailchimp_mcp_server.server:main"
mailchimp-mcp-server = "mailchimp_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/damientilman/mailchimp-mcp-server"
Repository = "https://github.com/damientilman/mailchimp-mcp-server"
Issues = "https://github.com/damientilman/mailchimp-mcp-server/issues"
