[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailchimp-mcp"
version = "1.1.0"
description = "MCP server for the Mailchimp Marketing API — access campaigns, audiences, reports, and more from any MCP-compatible client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Damien Tilman", email = "damien@tilman.marketing" },
]
keywords = ["mcp", "mailchimp", "email-marketing", "model-context-protocol", "marketing-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mailchimp_mcp_server"]

[project.scripts]
mailchimp-mcp = "mailchimp_mcp_server.server:main"
mailchimp-mcp-server = "mailchimp_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/damientilman/mailchimp-mcp-server"
Repository = "https://github.com/damientilman/mailchimp-mcp-server"
Issues = "https://github.com/damientilman/mailchimp-mcp-server/issues"
Changelog = "https://github.com/damientilman/mailchimp-mcp-server/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (FastMCP pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/mailchimp_mcp_server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
